--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@ button:hover {
 .weather-card p {
     margin: 10px 0;
 }
+@media screen and (max-width: 400px)
+{
+    button {
+    padding: 7px 10px;
+    margin-top: 1rem ;
+    }
+}
 
 
      </style>
