--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@ button:hover {
             <input type="text" id="cityInput" placeholder="Enter city name">
             <button onclick="getWeather()">Get Weather</button>
         </div>
-        <div id="weatherCard" class="weather-card"></div>
+        <div id="weatherCard" class="weather-card">
+            <h2 id="name"></h2>
+            <p id="temp"></p>
+            <p id="desc"></p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
